--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Border BorderBrush="Blue">
+            <TextBlock Text="Hello" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30"></TextBlock>
+       </Border>
     </Grid>
 </Window>
