--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Border BorderBrush="Blue">
+        <Border BorderBrush="Blue" CornerRadius="10">
             <TextBlock Text="Hello" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30"></TextBlock>
        </Border>
     </Grid>
